# TIDES

./: .gitignore  LICENSE.txt  README.md  Samhithatest.txt  env_dev.yaml  environment.yaml  pyproject.toml  requirements.txt  rt_cap.py  rt_scf.py  rt_scf_prop.py  setup.cfg
examples/: Example_Workbook.ipynb
examples/Blank_Observable/: Blank_Observable.py
examples/Blank_Potential/: Blank_Potential.py
examples/Custom_Observable/: Custom_Observable.py
examples/Custom_Potential/: Custom_Potential.py
examples/D3BJ_Dispersion/: D3BJ_Dispersion.py
examples/ExamplesFromOriginalTiDESPaper/: workup.ipynb
examples/H2_2c-Ehrenfest/: Workup_H2_Ehrenfest.py
examples/H2_Ehrenfest/: H2_Ehrenfest.py  Workup_H2_Ehrenfest.py
examples/H_BField/: H_BField.py  Workup_H_BField.py
examples/Li_ChargeTransfer/: Workup_Li_ChargeTransfer.py
examples/NaCl_Ehrenfest/: NaCl_Ehrenfest.py  Workup_NaCl_Ehrenfest.py
examples/Speed/: Speed.py
examples/VV10_Dispersion/: VV10_Dispersion.py
examples/Water_GKSX2C1e_UV-Vis/: Workup_Water_GHFX2C1e_UV-Vis.py
examples/Water_MOCAP/: Water_MOCAP.py  Workup_Water_MOCAP.py
src/: README.md  basis_utils.py  ehrenfest_brute_force.py  ehrenfest_force.py  ghf_x2c_h_atom.py  h_atom.py  hirshfeld.py  hirshtest.py  li_atom.py  rt_cap.py  rt_cpa.py  rt_ehrenfest.py  rt_ghf.py  rt_integrators.py  rt_nuclei.py  rt_observables.py  rt_output.py  rt_parse.py  rt_prop.py  rt_scf.py  rt_scf_cleanup.py  rt_scf_prop.py  rt_spec.py  rt_utils.py  rt_vapp.py  staticfield.py  x2c_ehrenfest_test.py  x2c_h_atom.py
src/OLD/: Victor.txt  ys.txt
(+164 files in other folders)
