[metadata]
name = TiDES
description = Real-Time Time-Dependent Electronic Structure Package
author = Kretchmer Research Group
license = Apache 2.0
license_file = LICENSE.txt
version = 1.0.0

[options]
packages =
    tides
    tides.*
install_requires =
    pyscf>=2.7
    numpy>=1.26.4
python_requires = >=3.12
package_dir =
    =src
